--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -83,7 +83,7 @@ display: none;
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
 <input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="reclaim_asset()"/>	
-<input type="button" value="check loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="check_loan_amount()"/>	
+<input type="button" value="display loan info" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="display_loan_info()"/>	
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
@@ -373,6 +373,37 @@ const abi = [
 	}
 ]
 
+function display_loan_info(){
+var display = (async function(){
+  
+  
+  localStorage.setItem("mySharedData", document.getElementById("password").value);
+    
+	
+	var pwdx = localStorage.getItem("mySharedData");
+
+	const contract_address = web3.utils.toChecksumAddress("0xdd6e83cc3843cac694b5aefb5aae8229a40f2d88")
+  	
+	
+	const contract_bal = new web3.eth.Contract(abi, contract_address);
+	const contract_ID = await contract_bal.methods.token_contracts_list(pwdx).call();
+	console.log(contract_ID)
+	const token_ID = await contract_bal.methods.tokens_list(pwdx).call();
+	console.log(token_ID)
+	const loan_ = await contract_bal.methods.loan_amount_list(pwdx).call();
+	console.log(loan_)
+	const term = await contract_bal.methods.loan_term_list(pwdx).call();
+	console.log(term)
+	const obligation = await contract_bal.methods.debt_obligation_list(pwdx).call();
+	console.log(obligation)
+  
+	
+
+//alert(balance)
+
+})()
+}
+
 function prompt_approve(){
 	web3.eth.abi.encodeFunctionSignature('approve(address,uint256)');
 }
@@ -438,7 +469,7 @@ var acct = (async function(){
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(100000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(2000001), 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(100000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': '1000000000000000000', 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
@@ -534,7 +565,7 @@ function loan_amount(){
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
 	const bal = contract_bal.methods.token_contracts_list(pwdx).call();
 	const loan_ = contract_bal.methods.loan_amount_list(pwdx).call();
-	console.log(loan)
+	console.log(loan_)
 	return bal
 	}
 
