--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -508,6 +508,10 @@ var acct = (async function(){
   //var result = await getAccounts()
 	await window.ethereum.enable();
 	
+	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
+	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
+	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 	
 	var nft_k = localStorage.getItem("NFT Contract");
 	var nft_id = localStorage.getItem("NFT Token ID");
