--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -77,9 +77,9 @@ display: none;
 <p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:65; left:0;></p>
 	
 <div id=category121w83>		
-<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="create_obligation()"/>
+<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
 <input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:30; left:0;" onClick="reclaim_asset()"/>	
-<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:25; left:0;">	
+<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:10; left:0;">	
 </div>
 <div id=category121w83>
 <input type="text" id="user_name1" name="user_name1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:195;">		
