--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -72,12 +72,12 @@ display: none;
 <body>
 
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:35; left:0;"></p>		
-<p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:45; left:0;"></p>
-<p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0;"></p>
-<p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:65; left:0;"></p>
+<p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0;"></p>
+<p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; left:0;"></p>
+<p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:95; left:0;"></p>
 	
 <div id=category121w83>		
-<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
+<input type="button" value="Lend" onClick="create_obligation()"/>
 <input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:30; left:0;" onClick="reclaim_asset()"/>	
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:10; left:0;">	
 </div>
